--- a/client/src/stylesheets/navbar.css
+++ b/client/src/stylesheets/navbar.css
@@ -13,8 +13,8 @@
 
 .navbar h1 {
     font-size: 3rem;
-    padding-top: 5px;
-    padding-bottom: 15px;
+    padding-top: 10px;
+    padding-bottom: 13px;
     padding-left: 80px;
 }
 
@@ -44,7 +44,7 @@
     align-items: center;
     background-color: #745f3853;
     border-radius: 10px;
-    min-width: 420px;
+    min-width: 350px;
     justify-content:space-evenly;
     height: 75px;
 }
@@ -73,15 +73,17 @@
     font-size: 1.5rem;
     position: relative;
     bottom: 10px;
+    align-items: center;
 }
 
 .links-second:hover::after {
-    content: 'Explore';
+    content: 'Find';
     font-weight: 500;
     color: #ffffff;
     font-size: 1.5rem;
     position: relative;
     bottom: 10px;
+    animation: 1s;
 }
 .links-third:hover::after {
     content: 'Post';
