--- a/client/src/stylesheets/signup.css
+++ b/client/src/stylesheets/signup.css
@@ -6,14 +6,13 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background: #ecb78c;
-  color: aliceblue;
+  background: #eb823c;
+  color: rgb(255, 247, 240);
 }
 
 .App h1 {
   text-align: center;
   font-size: 70px;
-  
 }
 
 .App h3 {
@@ -23,40 +22,68 @@
   top: -20px;
 }
 
+
+.my-form {
+  padding: 50px;
+  background: #ffa970;
+  border: #a05828;
+  border-width: 2px;
+  border-style: solid;
+  border-radius: 45px;
+  box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.397);
+  max-width: 400px;
+}
+
+.formInput {
+  font-size: 1.2em;
+  margin: auto;
+  text-align: center;
+  margin: 15px;
+}
+
 .formInput input {
   border: 1px solid rgba(252, 252, 252, 0.4);
-  background-color: rgba(252, 252, 252, 0.2);
+  background-color: rgba(252, 252, 252, 0.692);
   width: 250px;
   border-radius: 3px;
   font-family: "Source Sans Pro", sans-serif;
   padding: 10px 15px;
-  margin: 0 auto 10px auto;
+  margin: auto;
   display: block;
   text-align: center;
   font-size: 18px;
-  color: white;
+  color: rgb(0, 0, 0);
   font-weight: 300;
+}
+
+.formInput label {
+  margin-top: 10px;
 }
 
 .App button {
   appearance: none;
   outline: 0;
-  background-color: white;
-  border: 0;
+  background-color: #d86519;
+  border-color: #a05828;
+  border: 3;
   padding: 10px 15px;
+  font-weight:600;
   margin: 0 auto 10px auto;
   display: block;
-  color: #a37550;
-  border-radius: 3px;
-  width: 250px;
+  color: #ffffff;
+  border-radius: 10px;
+  width: 200px;
   font-size: 18px;
 }
 
+.App button:hover {
+  background-color: rgb(179, 130, 90);
+}
+
 .App form div {
-  /* background-color: #000; */
   color: #fff;
-  opacity: 0.5;
-  width: 100%;
+  opacity: 0.8;
+  align-items: center;
 }
 
 .formInput span {
@@ -99,12 +126,13 @@
   background-color: #d86519;
   color: #E4F9F5;
   top: 0px;
+  border-bottom: 3px solid #a05828;
 }
 
 .homenav-signup h1 {
   font-size: 3rem;
-  padding-top: 5px;
-  padding-bottom: 15px;
+  padding-top: 10px;
+  padding-bottom: 13px;
   padding-left: 80px;
 }
 
