--- a/client/src/stylesheets/create.css
+++ b/client/src/stylesheets/create.css
@@ -256,10 +256,10 @@
 
 .stock-image-body {
     height: 660px;
-    width: 85%;
     display: flex;
-    flex-direction: column;
+    align-items: center;
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .stock-image {
