--- a/client/src/stylesheets/create.css
+++ b/client/src/stylesheets/create.css
@@ -1,3 +1,8 @@
+.create-event {
+    display: flex;
+    justify-content: center;
+}
+
 .create-event header {
     align-items: center;
 }
@@ -5,9 +10,8 @@
 .create-event header {
     text-align: center;
     position: relative;
-    left: 5%;
     top: 90px;
-    width: 90%;
+    width: 100%;
     border-bottom: 1px solid #cbdcd960;
 }
 
@@ -22,7 +26,6 @@
 .create-event-body {
     position: absolute;
     top:210px;
-    left: 7%;
 }
 
 .create-event-form {
@@ -55,7 +58,7 @@
 .create-event-form .name, .create-event-form .location {
     width: 300px;
     height: 30px;
-    border: 1px solid #40514E;
+    border: 1px solid hsl(0, 0%, 80%);
     border-radius: 3px;
     padding: 1px 3px;
     font-size: 18px;
@@ -73,7 +76,7 @@
     width: 300px;
     height: 30px;
     font-size: 18px;
-    border: 1px solid #40514E;
+    border: 1px solid hsl(0, 0%, 80%);
     border-radius: 3px;
     padding: 3px;
     margin-left: 100px;
@@ -86,8 +89,8 @@
 }
 
 .description {
-    width: 500px;
-    height: 300px;
+    width: 650px;
+    height: 100px;
     border: 1px solid #40514E;
     border-radius: 3px;
     resize: none;
@@ -104,6 +107,10 @@
     display: flex;
     align-items: center;
     min-width: 300px;    
+}
+
+.genre-body {
+    max-width: 300px;   
 }
 
 .create-event-form button {
@@ -180,6 +187,7 @@
 }
 
 .image-preview-remove {
+    z-index: 1;
     top: 75px;
     left: 450px;
     margin: 0px;
