--- a/server/public/views/confirmation.handlebars
+++ b/server/public/views/confirmation.handlebars
@@ -32,7 +32,7 @@
 </head>
 <body class="">
   <div class="container">
-    <h1>Ласкаво просимо до Usof!</h1>
+    <h1>Ласкаво просимо до Uevent!</h1>
     <p>Щоб завершити реєстрацію, підтвердіть цю електронну скриньку - перейдіть за посиланням:</p>
     <a href="{{link}}">{{link}}</a>
     <p>
@@ -40,7 +40,7 @@
     </p>
     <hr/>
     <div>
-      © 2024 Usof
+      © 2024 Uevent
     </div>
   </div>
 </body>
