--- a/server/public/views/congratulations.handlebars
+++ b/server/public/views/congratulations.handlebars
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Welcome to Usof</title>
+  <title>Welcome to Uevent</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -32,9 +32,9 @@
 </head>
 <body>
   <div class="container">
-    <h1>{{name}}, ласкаво просимо до Usof!</h1>
+    <h1>{{name}}, ласкаво просимо до Uevent!</h1>
     <p>Вітаємо вас з реєстрацією в нашому додатку для створення подій. Ми раді, що ви з нами.</p>
-    <p>З Usof ви зможете насолоджуватися багатьма корисними функціями та можливостями, включаючи:</p>
+    <p>З Uevent ви зможете насолоджуватися багатьма корисними функціями та можливостями, включаючи:</p>
     <ul>
       <li>Створення власних подій;</li>
       <li>Перегляд загальнодоступних подій;</li>
@@ -44,7 +44,7 @@
     <p>Дякуємо, що обрали наш додаток!</p>
     <hr/>
     <div>
-      © 2024 Usof
+      © 2024 Uevent
     </div>
   </div>
 </body>
