--- a/client/src/stylesheets/profile.css
+++ b/client/src/stylesheets/profile.css
@@ -189,3 +189,108 @@
     top: -100px;
     left: 300px;
 }
+
+
+
+
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Полупрозрачный черный фон */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    text-align: center;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.modal-content h2 {
+    font-size: 36px;
+    margin-top: 10px;
+}
+
+.modal-content p {
+    font-size: 26px;
+    margin: 20px;
+}
+
+.modal-content button {
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: #b45822;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.modal-content button:hover {
+    background-color: #5f2e12;
+}
+
+
+
+.confirmation-page {
+    height: 100vh; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background: #eb823c;
+}
+
+.confirmation-page h1 {
+    color: #fff;
+}
+
+.back-button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #007bff;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+.back-button:hover {
+    background-color: #a14b12;
+}
+
+.my-form {
+    text-align: center;
+    padding: 50px;
+    background: #ffa970;
+    border: #a05828;
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 45px;
+    box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.397);
+    max-width: 400px;
+  }
+
+  .my-form a {
+    appearance: none;
+    outline: 0;
+    background-color: #d86519;
+    border-color: #a05828;
+    border: 3;
+    padding: 10px 15px;
+    font-weight:600;
+    margin: 30px auto 0 auto;
+    display: block;
+    color: #ffffff;
+    border-radius: 10px;
+    width: 200px;
+    font-size: 18px;
+  }
+  
