--- a/server/public/views/reset.handlebars
+++ b/server/public/views/reset.handlebars
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Welcome to Usof</title>
+  <title>Welcome to Uevent</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -35,12 +35,12 @@
     <h1>Скидання пароля</h1>
     <p>Для скидання паролю перейдіть за посиланням нижче.</p>
     <a href="{{link}}">{{link}}</a>
-    <p>З Usof ви зможете насолоджуватися багатьма корисними функціями та можливостями, включаючи:</p>
+    <p>З Uevent ви зможете насолоджуватися багатьма корисними функціями та можливостями, включаючи:</p>
     <p>Не соромтеся звертатися до нас у разі будь-яких питань чи потреби допомоги.</p>
     <p>Дякуємо, що обрали наш додаток!</p>
     <hr/>
     <div>
-      © 2024 Usof
+      © 2024 Uevent
     </div>
   </div>
 </body>
